k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qtec-api
  labels:
    name: qtec-api
